added game engine

--- a/N_queens/N_queens.vcxproj
+++ b/N_queens/N_queens.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="NQueens.h" />
+    <ClInclude Include="olcGameEngine.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
