--- a/N_queens/N_queens.vcxproj.filters
+++ b/N_queens/N_queens.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="NQueens.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="olcGameEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
